--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,33 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.4
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  intl_utils: ^2.8.13
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/main_logo.png"
+
+flutter_gen:
+  output: lib/generated/
+  integrations:
+    flutter_svg: true
+    image: true
+    rive: true
+    lottie: true
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+
+flutter_intl:
+  enabled: true
+  main_locale: ru
