--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
+  animated_splash_screen: ^1.3.0
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.4
