--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,34 @@ environment:
   sdk: ^3.9.2
 
 dependencies:
-  animated_splash_screen: ^1.3.0
+
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  animated_snack_bar: ^0.4.0
+  animated_splash_screen: ^1.3.0
+  auto_route: ^11.0.0
+  chopper: ^8.4.0
   flutter_launcher_icons: ^0.14.4
+  freezed: ^3.2.3
+  freezed_annotation: ^3.1.0
   intl: ^0.20.2
+  json_annotation: ^4.9.0
+  modal_bottom_sheet: ^3.0.0
+  reactive_forms: ^18.2.0
+  reactive_forms_annotations: ^8.0.1
+  flutter_bloc: ^9.1.1
+  get_it: ^9.2.0
+  auto_route_generator: ^10.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   intl_utils: ^2.8.13
+  build_runner: ^2.10.4
+  json_serializable: ^6.11.2
 
 flutter_launcher_icons:
   android: true
