--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   get_it: ^9.2.0
   auto_route_generator: ^10.4.0
+  package_rename: ^1.10.1
 
 dev_dependencies:
   flutter_test:
@@ -57,3 +58,10 @@ flutter:
 flutter_intl:
   enabled: true
   main_locale: ru
+
+package_rename_config:
+  android:
+    app_name: "TTA"
+ 
+  ios:
+    app_name: "TTA"
