--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   get_it: ^9.2.0
   auto_route_generator: ^10.4.0
   package_rename: ^1.10.1
+  chopper_generator: ^8.4.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
