--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   package_rename: ^1.10.1
   chopper_generator: ^8.4.0
   equatable: ^2.0.7
+  bloc: ^9.1.0
+  async: ^2.13.0
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
