--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   json_annotation: ^4.9.0
   modal_bottom_sheet: ^3.0.0
   reactive_forms: ^18.2.0
-  reactive_forms_annotations: ^8.0.1
+  reactive_forms_annotations: ^8.1.0-beta2
   flutter_bloc: ^9.1.1
   get_it: ^9.2.0
   auto_route_generator: ^10.4.0
@@ -34,6 +34,7 @@ dependencies:
   async: ^2.13.0
   http: ^1.6.0
   flutter_dotenv: ^6.0.0
+  reactive_forms_generator: ^8.1.0-beta2
 
 dev_dependencies:
   flutter_test:
