--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^1.6.0
   flutter_dotenv: ^6.0.0
   reactive_forms_generator: ^8.1.0-beta2
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
